@@ -16,6 +16,7 @@
        See issue #146. (Stefan)
 - NEW: Option to switch to the newly created branch/tag in the branch/tag
        dialog. See issue #150. (Stefan)
+- NEW: Diffing of properties. See issue #133. (Stefan)
 - CHG: The spellchecker now checks text pasted in the edit control
        immediately, without the need to enter text manually first.
        See issue #116. (Stefan)
